--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_install:
   - docker build -t peetg/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - npm run peetg/react-test npm test -- --coverage
+  - docker run peetg/react-test npm test -- --coverage
 
 after_sucess:
   - docker build -t peetg/multi-client ./client
