--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,16 @@ after_success:
   - docker push peetg/multi-worker
   - docker push peetg/multi-nginx
 
+deploy:
+  provider: elasticbeanstalk
+  region: eu-west-1
+  app: multi-docker
+  env: MulitDocker-env
+  bucket_name: elasticbeanstalk-eu-west-1-559169917305
+  bucket_path: docker-multi
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: 
+    secure: $AWS_SECRET_KEY
 
