--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ deploy:
   provider: elasticbeanstalk
   region: eu-west-1
   app: multi-docker
-  env: MulitDocker-env
+  env: MultiDocker-env
   bucket_name: elasticbeanstalk-eu-west-1-559169917305
   bucket_path: docker-multi
   on:
